cmake_minimum_required(VERSION 3.7)
project(TP10)

set(CMAKE_CXX_STANDARD 14)

add_executable(TP10 main.cpp Sujet.cpp Sujet.h Observateur.cpp Observateur.h StationMeteo.cpp StationMeteo.h Agriculteur.cpp Agriculteur.h Subject.cpp Subject.h Observer.cpp Observer.h PointOberver1.cpp PointOberver1.h PointObserver2.cpp PointObserver2.h ObservablePoint.cpp ObservablePoint.h Point.cpp Point.h)